--- a/RedBoots/style.css
+++ b/RedBoots/style.css
@@ -8,16 +8,16 @@ span{
     font-size: 15pt;
 }
 .head{
-    font-family: fantasy;
-    letter-spacing: 4px;
-    font-size: 30px;
+    font-family: monospace;
+    letter-spacing: 10px;
+    font-size: 50px;
     text-align: center;
-    padding-top: 15px;
+    padding-top: 45px;
     color: white;
 }
 .head p{
-    font-size: 25px;
-    font-family: fantasy;
+    font-size: 35px;
+    font-family: monospace;
     color: white;
     letter-spacing: 2px;
 }
@@ -43,7 +43,10 @@ textarea {
     min-height: 100px;
     border-radius: 20px;
     color: #2b5876;
+    text-align: center;
+    font-size: 22px;
 }
+
 span{
     color: ;
     text-shadow: 3px 2px black;
